First working version for windows + debug stubs for unix (probably, not working)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,14 @@
+cmake_minimum_required(VERSION 2.6)
 project(trade_connector)
 
-add_executable(trade_connector main.cpp)
+find_package(Boost 1.38 REQUIRED system thread)
+
+add_executable(trade_connector
+    transaq_client.cpp
+    transaq_wrapper.cpp
+    transaq_client.cpp
+    transaq_loader_fake.cpp
+    main.cpp)
+
+target_link_libraries(trade_connector ${Boost_LIBRARIES})
 
