File renaming + removing unnecessary .suo file .suo file is merely an user options, and 'stub' word is better than a 'fake'.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(trade_connector
     transaq_client.cpp
     transaq_wrapper.cpp
     transaq_client.cpp
-    transaq_loader_fake.cpp
+    transaq_loader_stub.cpp
     main.cpp)
 
 target_link_libraries(trade_connector ${Boost_LIBRARIES})
