--- a/vcproj/trade_connector/trade_connector.vcxproj.filters
+++ b/vcproj/trade_connector/trade_connector.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\transaq_wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\logger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\transaq_client.h">
